--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Zin Abidin</title>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css" integrity="sha256-+dIh4jG2jQTHZwW81yUo8h6tzXWcNumyNL5XPZbwp1E=" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="/assets/main.css" charset="utf-8" />
 </head>
 
@@ -17,8 +17,8 @@
     </nav>
   </header>
 
-  <div class="transparent z-max w-100 vh-100 flex justify-center items-center fixed flip-vertical-right">
-    <img class="w-50-ns w-80" src="assets/logo2.svg" alt="">
+  <div class="transparent z-1 w-100 vh-100 flex justify-center items-center fixed">
+    <img class="w-50-ns w-80 flip-vertical-right" src="assets/logo2.svg" alt="">
   </div>
 
   <div id="fullpage" class="container fr">
