--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Zin Abidin
   <img class="w-60-l w-90 flip-vertical-right" src="assets/logo.svg" alt="">
 </div>
 
-<div id="fullpage">
+<div id="fullpage" class="bg-gray">
 
   {% for issue in site.issue reversed %}
   <div class="section mv0 w-100 vh-100 cover flex items-end justify-end" style="background:url({{issue.cover}}) center">
