Fix issue sorting and permalink

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@ title: Zin Abidin
 
 <div id="fullpage">
 
-  {% for issue in site.issue reversed %}
+  {% assign sorted_issue = site.issue | sort: 'category' %}
+  {% for issue in sorted_issue reversed %}
   <div class="section mv0 w-100 vh-100 cover flex items-end justify-end" style="background:url({{issue.cover}}) center">
     <a href="{{issue.url | relative_url}}" class="link flex flex-column white underline-hover tr f-headline-ns f2 pa4-ns pa2 w-70-ns w100">
-      <span>Issue #{{issue.tag}}</span>
+      <span>Issue #{{issue.category}}</span>
       <span>{{issue.title}}</span>
     </a>
   </div>
